fix: On Mobile view header section text are to close, Do not reload after clicking the contact button. New Feature: Adding Lazy loading feature.

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -27,6 +27,7 @@
 }
 
 .heading__info__subtitle {
+  padding-top: 8px;
   font-size: clamp(1rem, 2vw, 3rem);
   font-weight: bold;
 }
